--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
 - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryProvider.jl")'
 - julia -e 'Pkg.clone("https://github.com/JuliaPackaging/BinaryBuilder.jl"); Pkg.build()'
 script:
+- export LD_LIBRARY_PATH=~/.julia/dev/BinaryBuilder/deps/qemu/lib
 - julia build_tarballs.jl
 deploy:
   provider: releases
